# image-classifier

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yaml  test.yaml
notebooks/: aboba.ipynb  classifier.ipynb  hypotheses.ipynb
src/: classifier.py
src/classifier/: __init__.py  classifier.py
src/features/: __init__.py  asphalt_and_stone_texture_density.py  blue_and_turquoise_gradient_density.py  feature.py  features.py  green_pixel_density.py  horizontal_line_density.py  mountain_edge_density.py  organic_shapes_and_curves.py  shadow_and_texture_contrast.py  straight_angles.py  texture_smoothness.py  vertical_line_density.py  water_reflection_density.py  white_and_blue_pixel_density.py
src/new_features/: feature.py
src/utils/: __init__.py  utils.py
tests/: test_classifier.py  test_features.py  test_utils.py
ui/: __main__.py  main.py
