[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "kagglehub (>=0.3.6,<0.4.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "scipy (>=1.15.1,<2.0.0)",
    "joblib (>=1.4.2,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "notebook (>=7.3.2,<8.0.0)",
    "streamlit (>=1.41.1,<2.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.3"
pre-commit = "^4.1.0"

